[package]
name = "rinha_backend_2024_Q1"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
axum = { version = "0.7.4", features = ["json", "tokio"] }
env_logger = "0.11.2"
log = "0.4.21"
serde = { version = "1.0.196", features = ["derive"] }
serde_json = "1.0.113"
sqlx = { version = "0.7.3", features = ["postgres", "runtime-tokio", "time", "macros"] }
time = { version = "0.3.34", features = ["serde", "formatting", "parsing"] }
tokio = { version = "1.36.0", features = ["full"] }

[profile.release]
opt-level = 3
